@@ -76,10 +76,31 @@ describe 'Asciidoctor::PDF::Converter - Floating Title' do
 
   it 'should force discrete heading with breakable option to next page if no content is inked below it' do
     pdf = with_content_spacer 10, 675 do |spacer_path|
-      to_pdf <<~EOS
+      to_pdf <<~EOS, pdf_theme: { heading_min_height_after: nil }
       image::#{spacer_path}[]
 
       [discrete#buddy%breakable]
+      == Discrete Heading
+
+      ----
+      Do it like this.
+      ----
+      EOS
+    end
+
+    (expect pdf.pages).to have_size 2
+    p2_text = (pdf.page 2).text
+    (expect p2_text).to include 'Discrete Heading'
+    (expect get_names pdf).to have_key 'buddy'
+    (expect (get_dest pdf, 'buddy')[:page_number]).to eql 2
+  end
+
+  it 'should force discrete heading to next page when heading_min_content_after is auto if no content is inked below it' do
+    pdf = with_content_spacer 10, 675 do |spacer_path|
+      to_pdf <<~EOS, pdf_theme: { heading_min_height_after: 'auto' }
+      image::#{spacer_path}[]
+
+      [discrete#buddy]
       == Discrete Heading
 
       ----
